z-index navigation fix

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -14,13 +14,14 @@
   position: absolute;
   top: 0;
   width: 100vw;
+  z-index: 10;
 }
 
 .navigation--open .navigation-close {
   display: block;
   position: absolute;
   top: 2rem;
-  z-index: 10;
+  z-index: 20;
 }
 
 .navigation {
